# Multi-Orchestrator-Bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  démo.webm  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: python.yml
docs/: README.md  api.md  architecture.md  how_to_run.md  live_trading_guide.md  strategy_guide.md
docs/architecture/: api.md  overview.md  storage.md  testing.md
docs/getting-started/: configuration.md  installation.md  usage.md
docs/reference/: models.md
docs/ui/: dashboard.md
examples/: advanced_backtest_example.py  config.example.yml  run_backtest_example.py
src/: __init__.py  api.py  main.py  models.py  storage.py
src/orchestrator/: __init__.py  advanced_backtester.py  backtest_runner.py  cli.py  config.py  data_loader.py  orchestrator.py  papertrader.py  security.py  strategy_interface.py
src/orchestrator/adapters/: advanced_strategies.py  ccxt_executor.py  mock_exchange.py  simple_strategies.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: __init__.py  test_api.py  test_backtest.py  test_models.py  test_orchestrator.py  test_papertrader.py  test_strategies.py
